convert to cucumber

--- a/apps/myapp1/src/app/app.component.html
+++ b/apps/myapp1/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div style="text-align:center">
   <h1>
-    Welcome to an Angular CLI app built with Nrwl Nx!
+    Welcome to an Angular CLI app built with Nrwl Nx! myapp1
   </h1>
   <img width="300" src="assets/nx-logo.png">
 </div>
